kube-manifests-wintel/highway-deployment-and-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: highway-nginx-deployment
  labels:
    app: app1-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1-nginx
  template:
    metadata:
      labels:
        app: app1-nginx
    spec:
      containers:
        - name: app1-nginx
          image: 067267740034.dkr.ecr.ap-southeast-1.amazonaws.com/wintel/highway:v1
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: highway-nginx-nodeport-service
  labels:
    app: app1-nginx
  annotations:
#Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer    
    #alb.ingress.kubernetes.io/healthcheck-path: /highway/index.html
    #alb.ingress.kubernetes.io/healthcheck-path: /*    
spec:
  type: NodePort
  selector:
    app: app1-nginx
  ports:
    - port: 80
      targetPort: 80
