kube-manifests-wintel/salon-deployment-and-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: salon-nginx-deployment
  labels:
    app: app2-nginx 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2-nginx
  template:
    metadata:
      labels:
        app: app2-nginx
    spec:
      containers:
        - name: app2-nginx
          image: 067267740034.dkr.ecr.ap-southeast-1.amazonaws.com/wintel/salon
          ports:
            - containerPort: 80
          volumeMounts:
            - name: persistent-storage
              mountPath: /var/log/nginx
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
              claimName: efs-claim
---
apiVersion: v1
kind: Service
metadata:
  name: salon-nginx-nodeport-service
  labels:
    app: app2-nginx
  annotations:
#Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer
    alb.ingress.kubernetes.io/healthcheck-path: /salon/index.html
    #alb.ingress.kubernetes.io/healthcheck-path: /*
spec:
  type: NodePort
  selector:
    app: app2-nginx
  ports:
    - port: 80
      targetPort: 80
